--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
 
     defaultConfig {
         applicationId "com.yensontam.recordings"
-        minSdk 24
-        targetSdk 31
+        minSdk 26
+        targetSdk 29
         versionCode 1
         versionName "1.0"
 
@@ -41,6 +41,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation "androidx.camera:camera-core:1.1.0-alpha10"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha10"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha10"
+    implementation "androidx.camera:camera-view:1.0.0-alpha30"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha30"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
