--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yensontam.recordings">
 
+    <uses-feature android:name="android.hardware.camera.front" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +23,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".camera.view.CameraActivity"
+            android:exported="true"
+            android:label="@string/label_camera_activity"
+            android:theme="@style/Theme.Recordings.NoActionBar">
         </activity>
     </application>
 
