--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "io.insert-koin:koin-core:3.0.1"
+    implementation "io.insert-koin:koin-core-ext:3.0.1"
+    implementation "io.insert-koin:koin-android:3.0.1"
+    androidTestImplementation "io.insert-koin:koin-test:3.0.1"
 
 }
